kubernetes/traefik-forward-auth/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
spec:
  forwardAuth:
    address: http://traefik-forward-auth.traefik:4181
    authResponseHeaders:
      - X-Forwarded-User
